# SnakAI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  logging.conf  pyproject.toml  pytest.ini  requirements.txt
src/snakai/: __main__.py  agent.py  game.py  model.py  snake_game.py  utils.py
