[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snakai"
version = "0.1.0"
description = "A sample Python package"
readme = "README.md"
authors = [
    { name = "Arnold Mokira", email = "dr.mokira@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["pygame", "reinforcement-learning"]
dependencies = [
    "requests>=2.25.1",
]

[project.urls]
"Homepage" = "https://github.com/your-username/my-python-package"
"Bug Tracker" = "https://github.com/your-username/my-python-package/issues"

[tool.setuptools.packages.find]
where = ["src"]

